// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`active category > 1st quest 1`] = `
<DocumentFragment>
  <script>
    !function(){try{var d=document.documentElement,c=d.classList;c.remove('light','dark');var e=localStorage.getItem('theme');if('system'===e||(!e&&true)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';c.add('dark')}else{d.style.colorScheme = 'light';c.add('light')}}else if(e){c.add(e|| '')}if(e==='light'||e==='dark')d.style.colorScheme=e}catch(e){}}()
  </script>
  <div
    class="css-8f2oos"
  >
    <p
      class="css-uok8h6"
    >
      Other Categories
    </p>
    <div
      class="css-12atwa6"
    >
      <a
        class="chakra-link css-s1xldg"
        href="/score/firstQuest/en"
      >
        1st Quest
      </a>
      <a
        class="chakra-link css-9q1s09"
        href="/score/secondQuest/en"
      >
        2nd Quest
      </a>
      <a
        class="chakra-link css-qk0x5r"
        href="/score/swordless/en"
      >
        Swordless
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`active category > 2nd quest 1`] = `
<DocumentFragment>
  <script>
    !function(){try{var d=document.documentElement,c=d.classList;c.remove('light','dark');var e=localStorage.getItem('theme');if('system'===e||(!e&&true)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';c.add('dark')}else{d.style.colorScheme = 'light';c.add('light')}}else if(e){c.add(e|| '')}if(e==='light'||e==='dark')d.style.colorScheme=e}catch(e){}}()
  </script>
  <div
    class="css-8f2oos"
  >
    <p
      class="css-uok8h6"
    >
      Other Categories
    </p>
    <div
      class="css-12atwa6"
    >
      <a
        class="chakra-link css-1matpa1"
        href="/score/firstQuest/en"
      >
        1st Quest
      </a>
      <a
        class="chakra-link css-14wtpmz"
        href="/score/secondQuest/en"
      >
        2nd Quest
      </a>
      <a
        class="chakra-link css-qk0x5r"
        href="/score/swordless/en"
      >
        Swordless
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`active category > swordless 1`] = `
<DocumentFragment>
  <script>
    !function(){try{var d=document.documentElement,c=d.classList;c.remove('light','dark');var e=localStorage.getItem('theme');if('system'===e||(!e&&true)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';c.add('dark')}else{d.style.colorScheme = 'light';c.add('light')}}else if(e){c.add(e|| '')}if(e==='light'||e==='dark')d.style.colorScheme=e}catch(e){}}()
  </script>
  <div
    class="css-8f2oos"
  >
    <p
      class="css-uok8h6"
    >
      Other Categories
    </p>
    <div
      class="css-12atwa6"
    >
      <a
        class="chakra-link css-1matpa1"
        href="/firstQuest/en"
      >
        1st Quest
      </a>
      <a
        class="chakra-link css-9q1s09"
        href="/secondQuest/en"
      >
        2nd Quest
      </a>
      <a
        class="chakra-link css-vg267u"
        href="/swordless/en"
      >
        Swordless
      </a>
    </div>
  </div>
</DocumentFragment>
`;
